# NVidia_glWaitSync_Bug

./: CMakeLists.txt  readme.md
Ext/: CMakeLists.txt
Ext/SDL2/: CMakeLists.txt
Ext/SDL2/msvc/cmake/: SDL2Targets.cmake  SDL2mainTargets.cmake  SDL2staticTargets.cmake
Ext/SDL2/msvc/include/SDL2/: SDL_revision.h
Ext/SDL2/msvc/lib/: SDL2main.lib
Ext/glad/: CMakeLists.txt
Ext/glad/include/glad/: gl.h
Ext/glad/src/: gl.c
SyncTest/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
